# caffe_example

./: clcaffe_install_use.docx  install-clcaffe.sh  install-opencldriver.sh  install-opencldriver4.1.sh  readme.md
MobilenetSSD_Train_Compression/: merge_bn.py  model_pruning.py  readme.txt  solver_test.prototxt  solver_test_pruning.prototxt  solver_train.prototxt  test.sh  test_purning.sh  train_purning.sh  transferTypeToDepthwiseConvolution.py
MobilenetSSD_Train_Compression/example_new/: MobileNetSSD_test.prototxt
MobilenetSSD_Train_Compression/example_purning/: MobileNetSSD_train_pruning_ok.prototxt
Model/MobileNetSSD/: comparedata.py  compareresult.py  readme.txt  show_all.py
Model/MobilenetSSD_Train_Compression/: solver_train_pruning.prototxt  train.sh
Windows_install/: build-clcaffe.cmd  copy-install.cmd  setCachePath.txt
Windows_install/nuget/: clCaffe_Package.nuspec
benchmark/: AlexNet-merged.prototxt  benchmarks.sh  fuse_ResNet_50_deploy.prototxt  merged_mobilenet_deploy.prototxt  mobilenetssd-merged.prototxt  ssdvgg_fusedeploy.prototxt  yolo_fused_deploy.prototxt
benchmark/nofuse/: vgg16.prototxt
example_code/: readme.txt
example_code/multicam_mobilenetssd/: CMakeLists.txt  SDL2Show.cpp  SDL2Show.hpp  XCBShow.cpp  XCBShow.hpp  cl_kernels.sh  detector.cpp  detector.hpp  kernels.cpp  kernels.hpp  mobilenet_ssd.cpp  videodec.cpp
example_code/multicam_mobilenetssd/cl_kernels/: preprocess.cl
example_code/multicam_mobilenetssd/cmake/: FindFFmpegYami.cmake
example_code/multicam_mobilenetssd/dependence/: build.sh
fp16/: CMakeLists.txt  classification_fp16.cpp
fp32/: CMakeLists.txt  classification.cpp
install_scripts/Centos_install/: atlas-3.8.4-2.el6.x86_64.rpm  install-clcaffe.sh  readme.txt
install_scripts/Ubuntu_install/: install-clcaffe.sh  readme.txt
module_script/: GoogleNetV1-merged.prototxt  GoogleNetV2-merged.prototxt  ResNet101-merged.prototxt  VGG16-merged.prototxt  benchmarks.sh
(+51 files in other folders)
